k8s.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mariadb:11
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  selector: 
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-network-policy
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: drupal
    ports:
    - protocol: TCP
      port: 3306

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drupal
spec:
  replicas: 6
  selector:
    matchLabels:
      app: drupal
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: drupal
    spec:
      containers:
      - image: drupal-local
        name: drupal
        ports:
        - containerPort: 80
        volumeMounts:
        - name: drupal-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: drupal-persistent-storage
        persistentVolumeClaim:
          claimName: drupal-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: drupal
spec:
  selector: 
    app: drupal
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
